# claude-code-dashboard

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.claude/: memos.md
.claude/memory/: MEMORY.md  auto_resize_dpr_flicker_collapse.md  background-task-kill-is-silent.md  benign_openers_offer_questions.md  context_alert_outstanding_not_persisted.md  context_percent_tokens_watcher_only.md  dashboard_test_port_override.md  debug_auto_resize_children_race.md  debug_auto_resize_config_race.md  debug_auto_resize_display_disable_collapse.md  debug_auto_resize_dpi_drift.md  debug_console_titles_tool_consoles.md  debug_history_rendering_via_prompt_history.md  debug_preview_tray_rendering.md  debug_state_transitions_via_widget_jsonl.md  debug_sync_fake_peer.md  debug_synthetic_hook_events.md  debug_terminal_reading_e2e.md  (+31 more)
docs/: _config.yml  index.md
integrations/: claude_hook.py
src/: AboutApp.svelte  App.svelte  HistoryApp.svelte  IntensityApp.svelte
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adapters.rs  auto_resize.rs  chat_id_registry.rs  commands.rs  config.rs  config_watcher.rs  custom_names.rs  http_server.rs  idle.rs  idle_probe.rs  label_policy.rs  lib.rs  liveness.rs  liveness_reaper.rs  log_watcher.rs  logging.rs  main.rs  nonce_store.rs  notifications.rs  prompt_history.rs  remote_history.rs  remote_usage.rs  setup.rs  state.rs  sync.rs  telegram.rs  terminal_title.rs  tray.rs  tray_badge.rs  usage_history.rs  usage_limits.rs  waiting_settle.rs
src-tauri/src/adapters/: claude.rs
(+32 files in other folders)
