[package]
name = "claude-code-dashboard"
version = "1.6.2"
description = "Claude Code Dashboard - always-on-top widget for tracking AI coding agents"
authors = ["Oleg Savelyev"]
edition = "2021"

[lib]
name = "claude_code_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time", "sync"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
notify = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
open = "5"
fontdue = "0.9"
# Resolve the app-data dir before the Tauri builder runs (see lib.rs run()), so
# ConfigState is managed before the webview can call get_config. MUST match
# Tauri's own `dirs` major (currently 6) — Tauri's app_data_dir() is
# `dirs::data_dir()/<identifier>`, and we recompute that same path pre-build.
# Bump in lockstep with a Tauri upgrade that moves `dirs`, or the two paths could
# diverge onto different config files.
dirs = "6"
